--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "react-confetti": "^6.4.0",
+    "react-use": "^17.6.0"
   }
 }
