--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -18,3 +18,6 @@ steps:
           --platform managed \
           --region us-west2 \
           --allow-unauthenticated \
+
+options:
+  logging: CLOUD_LOGGING_ONLY
